WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133186
-apple-system- styled element doesn't respond to system font size changes
https://bugs.webkit.org/show_bug.cgi?id=133186
Summary
-apple-system- styled element doesn't respond to system font size changes
Martin Hock
Reported
2014-05-22 11:09:32 PDT
-apple-system- styled element doens't respond to system font size changes. <
rdar://problem/16583782
>
Attachments
patch
(14.38 KB, patch)
2014-05-22 11:13 PDT
,
Martin Hock
enrica
: review+
Details
Formatted Diff
Diff
address comments
(15.17 KB, patch)
2014-05-22 14:04 PDT
,
Martin Hock
no flags
Details
Formatted Diff
Diff
remove unneeded change to FontCacheIOS.mm
(14.17 KB, patch)
2014-05-22 14:40 PDT
,
Martin Hock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Martin Hock
Comment 1
2014-05-22 11:13:45 PDT
Created
attachment 231899
[details]
patch
Enrica Casucci
Comment 2
2014-05-22 12:15:48 PDT
Comment on
attachment 231899
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=231899&action=review
Looks good to me, provided you address the comments.
> Source/WebCore/ChangeLog:3 > + -apple-system- styled element doens't respond to system font size changes.
typo: doesn't. We normally use the same title for all ChangeLogs in the same patch.
> Source/WebCore/WebCore.xcodeproj/project.pbxproj:2272 > + 759CB837192DA9190012BC64 /* ControlStates.h in Headers */ = {isa = PBXBuildFile; fileRef = 311C08BC18E35D6800B65615 /* ControlStates.h */; settings = {ATTRIBUTES = (Private, ); }; };
What is this?
> Source/WebCore/WebCore.xcodeproj/project.pbxproj:25764 > + 759CB837192DA9190012BC64 /* ControlStates.h in Headers */,
What is this change?
> Source/WebCore/rendering/RenderThemeIOS.mm:315 > CFStringRef RenderThemeIOS::contentSizeCategory()
No need to use CFStringRef here.
> Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:165 > + CFStringRef _userTextSize;
We normally use NSString.
> Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:1043 > +- (CFStringRef)_contentSizeCategory
Ditto. This way you don't need the cast on the return.
Martin Hock
Comment 3
2014-05-22 12:23:36 PDT
(In reply to
comment #2
)
> (From update of
attachment 231899
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=231899&action=review
> > Looks good to me, provided you address the comments. > > > Source/WebCore/ChangeLog:3 > > + -apple-system- styled element doens't respond to system font size changes. > > typo: doesn't. We normally use the same title for all ChangeLogs in the same patch.
Oops, put a bad title in that one, thanks!
> > Source/WebCore/WebCore.xcodeproj/project.pbxproj:2272 > > + 759CB837192DA9190012BC64 /* ControlStates.h in Headers */ = {isa = PBXBuildFile; fileRef = 311C08BC18E35D6800B65615 /* ControlStates.h */; settings = {ATTRIBUTES = (Private, ); }; }; > > What is this? > > > Source/WebCore/WebCore.xcodeproj/project.pbxproj:25764 > > + 759CB837192DA9190012BC64 /* ControlStates.h in Headers */, > > What is this change?
This is needed in order to #import <WebCore/RenderThemeIOS.h> in WebPageIOS.mm. It's because RenderThemeIOS needs RenderTheme which in turn needs ControlStates.
> > Source/WebCore/rendering/RenderThemeIOS.mm:315 > > CFStringRef RenderThemeIOS::contentSizeCategory() > > No need to use CFStringRef here. > > > Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:165 > > + CFStringRef _userTextSize; > > We normally use NSString. > > > Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:1043 > > +- (CFStringRef)_contentSizeCategory > > Ditto. This way you don't need the cast on the return.
OK, I'll try getting rid of the CFStringRefs.
Martin Hock
Comment 4
2014-05-22 14:04:58 PDT
Created
attachment 231913
[details]
address comments
Martin Hock
Comment 5
2014-05-22 14:40:40 PDT
Created
attachment 231914
[details]
remove unneeded change to FontCacheIOS.mm
Martin Hock
Comment 6
2014-05-22 14:53:01 PDT
Committed
r169223
: <
http://trac.webkit.org/changeset/169223
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug